Alignment fix

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -9,7 +9,7 @@ input[type=text] {
     border: 0px solid rgb(51, 51, 51);
     border-radius: 5px;
     min-width: 334px; 
-    height: 33px;
+    height: 35px;
     line-height: 32px;
     font-weight: 400;
     font-size: 20px;
